--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,6 +14,7 @@ nav {
   width: 100%;
   position: fixed !important;
   top: 0;
+  z-index: 999;
 }
 
 .top-element {
@@ -68,13 +69,20 @@ nav {
   box-sizing: border-box;
 }
 
+section {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .intro {
+  position: relative;
   width: 100%;
   height: 100vh;
   background: linear-gradient(150deg, #281483 15%, #8f6ed5 70%, #d782d9 94%);
   display: flex;
   justify-content: center;
   align-items: center;
+  clip-path: polygon();
 }
 
 .center-work {
@@ -83,6 +91,7 @@ nav {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  z-index: 2;
 }
 
 .center-work p {
@@ -110,6 +119,7 @@ nav {
 .buttons {
   display: flex;
   margin-top: 40px;
+  border: none;
 }
 
 .btn1 {
@@ -157,5 +167,358 @@ nav {
   height: 25px;
   width: 100px;
   margin-left: 10px;
+}
+
+.separator svg {
+  fill: white;
+}
+
+.separator-skew {
+  height: 60px;
+}
+
+.separator-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+svg {
+  color: white;
+}
+
+.shape-primary {
+  background: linear-gradient(150deg, #281483 15%, #8f6ed5 70%, #d782d9 94%);
+}
+
+.shape {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.shape span {
+  position: absolute;
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape-style-1 span:nth-child(2) {
+  right: 4%;
+  top: 10%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.shape-style-1 .span-50 {
+  height: 50px;
+  width: 50px;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(3) {
+  top: 280px;
+  right: 5.66666%;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.shape-style-1 .span-50 {
+  height: 50px;
+  width: 50px;
+}
+
+.shape-primary span:nth-child(3) {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(4) {
+  top: 320px;
+  right: 7%;
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.shape-style-1 .span-75 {
+  height: 75px;
+  width: 75px;
+}
+
+.shape-primary span:nth-child(4) {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.shape-style-1 span {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(5) {
+  top: 38%;
+  left: 1%;
+  right: auto;
+  background: rgba(255, 255, 255, 0.05);
+}
+
+.shape-style-1 .span-100 {
+  height: 100px;
+  width: 100px;
+}
+
+.shape-primary span:nth-child(5) {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.shape-style-1 span {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(6) {
+  width: 200px;
+  height: 200px;
+  top: 44%;
+  left: 10%;
+  right: auto;
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.shape-style-1 .span-75 {
+  height: 75px;
+  width: 75px;
+}
+
+.shape-style-1 span {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(7) {
+  bottom: 50%;
+  right: 36%;
+  background: rgba(255, 255, 255, 0.04);
+}
+
+.shape-style-1 .span-50 {
+  height: 50px;
+  width: 50px;
+}
+
+.shape-style-1 span {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.shape-style-1 span:nth-child(8) {
+  bottom: 70px;
+  right: 2%;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.shape-style-1 .span-100 {
+  height: 100px;
+  width: 100px;
+}
+
+.shape-style-1 span {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.shape span {
+  position: absolute;
+}
+
+.basic {
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #32325d;
+}
+
+.h3-class {
+  color: #2dce89 !important;
+  font-weight: bold;
+  font-weight: 600 !important;
+  margin-top: 30px;
+}
+
+.buttonss {
+  border: none;
+  box-shadow: 1px 3px 1px #9E9E9E;
+}
+
+.btns {
+  background-color: aqua;
+  margin-right: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+  position: relative;
+  text-transform: uppercase;
+  transition: all .15s ease;
+  will-change: transform;
+  letter-spacing: .025em;
+  font-size: .875rem;
+}
+
+.btnss {
+  background-color: aqua;
+  margin-right: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+  position: relative;
+  text-transform: uppercase;
+  transition: all .15s ease;
+  will-change: transform;
+  letter-spacing: .025em;
+  font-size: .875rem;
+}
+
+.btnss i {
+  margin-right: 5px;
+}
+
+.small {
+  margin-top: 30px;
+  font-weight: 600 !important;
+  font-size: 80%;
+}
+
+.small-btn {
+  background-color: aqua;
+  margin-right: 5px;
+  padding: 0.5rem 1rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+  position: relative;
+  text-transform: uppercase;
+  transition: all .15s ease;
+  will-change: transform;
+  letter-spacing: .025em;
+  font-size: 10px;
+}
+
+.regular-btn {
+  background-color: aqua;
+  margin-right: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+  position: relative;
+  text-transform: uppercase;
+  transition: all .15s ease;
+  will-change: transform;
+  letter-spacing: .025em;
+  font-size: .875rem;
+}
+
+.large-btn {
+  margin-right: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1.30rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+  position: relative;
+  text-transform: uppercase;
+  transition: all .15s ease;
+  will-change: transform;
+  letter-spacing: .025em;
+  font-size: .900rem;
+}
+
+.pick {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  font-weight: 600 !important;
+  font-size: 80%;
+}
+
+.color-button button {
+  border: none;
+  box-shadow: 1px 3px 1px #9E9E9E;
+}
+
+.outline {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  font-weight: 600 !important;
+  font-size: 80%;
+}
+
+.btnk {
+  margin-right: 10px;
+  padding: 10px;
+}
+
+.btnk button {
+  padding: 20px;
+}
+
+.link-button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  font-weight: 600 !important;
+  display: inline-block;
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border: 1px solid transparent;
+}
+
+.link-buttons a {
+  text-decoration: none;
 }
 /*# sourceMappingURL=main.css.map */
