--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,7 +8,7 @@
   margin-right: 40px;
 }
 
-nav {
+.nav-bar {
   display: flex;
   align-items: center;
   width: 100%;
@@ -520,5 +520,76 @@ svg {
 
 .link-buttons a {
   text-decoration: none;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+form {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sentences {
+  margin-left: 100px;
+  padding: 15px;
+}
+
+.sentences h3 {
+  color: #2dce89 !important;
+  font-weight: bold;
+  font-weight: 600 !important;
+  margin-top: 50px;
+  margin-left: 40px;
+  margin-bottom: 20px;
+}
+
+.sentences small {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 50px;
+  font-weight: 600 !important;
+  font-size: 80%;
+  margin-left: 40px;
+}
+
+.second-form {
+  background-color: #e6e9f0;
+}
+
+.check-forms-general {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.cb small {
+  margin-bottom: 10px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.h3 {
+  color: #2dce89 !important;
+  font-weight: bold;
+  font-weight: 600 !important;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.myh2 {
+  font-size: 2rem;
+  color: #32325d;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
 }
 /*# sourceMappingURL=main.css.map */
