--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,5 +7,6 @@
 @import'./components/basicelements';
 @import'./components/forms';
 @import'./components/menu';
-@import'./components/colornav'
+@import'./components/colornav';
+@import'./components/tabs'
 
