--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -614,4 +614,55 @@ form {
 h3 {
   color: #2dce89;
 }
+
+.myalerts {
+  color: #32325d;
+  font-weight: lighter;
+  margin-bottom: 25px;
+}
+
+.like {
+  margin-right: 10px;
+}
+
+.bell {
+  margin-right: 10px;
+}
+
+.bell-2 {
+  margin-right: 10px;
+}
+
+.my-danger {
+  margin-right: 10px;
+}
+
+.mysuccess-bg {
+  background-color: #4fd69c;
+  padding: 20px;
+}
+
+.mysecondary-bg {
+  background-color: #37d5f2;
+  padding: 20px;
+}
+
+.mydanger-bg {
+  background-color: #fc7c5f;
+  padding: 20px;
+}
+
+.mypink-bg {
+  background-color: #f75676;
+  padding: 20px;
+}
+
+.typ-text {
+  font-weight: 400;
+  color: #32325d;
+}
+
+.headings {
+  margin-top: 30px;
+}
 /*# sourceMappingURL=main.css.map */
