--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,5 +8,8 @@
 @import'./components/forms';
 @import'./components/menu';
 @import'./components/colornav';
-@import'./components/tabs'
+@import'./components/tabs';
+@import './components/alerts';
+@import'./components/typography'
+
 
