--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -21,3 +21,18 @@
     color: #2dce89
 }
 
+.minnos-text{
+text-transform: uppercase;
+color: rgb(59, 54, 54);
+
+font-size: small;
+}
+
+.shadov-g{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.tab-content{
+   padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
