--- a/src/assets/scss/components/_typography.scss
+++ b/src/assets/scss/components/_typography.scss
@@ -6,3 +6,29 @@
 .headings{
     margin-top: 30px;
 }
+
+
+.h3-col9{
+    color: black;
+}
+
+.lanqidi-1{
+    font-size: 50px;
+}
+
+
+.lanqidi-2{
+    font-size:40px;
+}
+
+.lanqidi-3{
+    font-size: 30px;
+}
+
+.lanqidi-4{
+    font-size: 20px;
+}
+
+.lanq{
+    color: #32325d;
+}
