--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,8 @@
 @import'./components/colornav';
 @import'./components/tabs';
 @import './components/alerts';
-@import'./components/typography'
+@import'./components/typography';
+@import'./components/displaytitles';
+@import'./components/specalized'
 
 
