--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -15,6 +15,7 @@
   position: fixed !important;
   top: 0;
   z-index: 999;
+  transition: 0.15s all linear;
 }
 
 .top-element {
@@ -70,8 +71,8 @@
 }
 
 section {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .intro {
@@ -593,6 +594,30 @@ form {
   margin-right: auto;
 }
 
+.cor-h1 {
+  color: white;
+  font-weight: 100;
+}
+
+.cor-p {
+  color: white;
+  font-size: 23px;
+  font-weight: 100;
+  margin-top: 20px;
+}
+
+.cor-btnn {
+  padding: 9px;
+  width: 94x;
+  border: 0;
+  letter-spacing: 1px;
+  margin-top: 20px;
+}
+
+#carouselExampleIndicators {
+  transform: scale(1) perspective(1040px) rotateY(-11deg) rotateX(2deg) rotate(2deg);
+}
+
 .words {
   margin-bottom: 30px;
 }
@@ -711,6 +736,121 @@ h3 {
 }
 
 .duman-h6 {
-  color: #525f7f;
+  color: #2a334b;
+  font-size: 40px;
+}
+
+.duman-h3 {
+  color: #aeb1b4;
+  margin-top: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.p-tx {
+  color: #2dce89;
+  font-weight: bold;
+}
+
+.lg-t {
+  font-size: 22px;
+  color: #6c757d !important;
+  font-weight: lighter;
+}
+
+.smm {
+  font-size: 16px;
+  color: #8898aa;
+}
+
+.kkn {
+  font-size: 34px;
+  color: #32325d;
+  margin-bottom: 30px;
+}
+
+.jj {
+  width: 150px;
+}
+
+.mnm {
+  width: 150px;
+}
+
+.this-section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #778bfb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel {
+  position: relative;
+}
+
+.this-section {
+  clip-path: polygon(0 1%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.display-3 {
+  font-size: 2.1875rem;
+  font-weight: 600;
+  line-height: 1.5;
+  color: #2a2a50;
+}
+
+.container {
+  max-width: 1040px;
+}
+
+.nuc-p {
+  color: #4c5876;
+  font-size: 22px;
+  font-weight: lighter;
+}
+
+.nuc-btn {
+  color: white;
+  background-color: #5e72e4;
+  margin-right: 5px;
+  letter-spacing: 1px;
+}
+
+.nuce-btn {
+  color: #fff;
+  background-color: #172b4d;
+  letter-spacing: 1px;
+}
+
+.dropdown:hover .dropdown-menu {
+  visibility: visible !important;
+  opacity: 1 !important;
+  transform: translateY(-30px);
+}
+
+.dropdown .dropdown-menu {
+  display: block;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all .3s ease;
+  top: 80px;
+}
+
+.dropdown .dropdown-menu:before {
+  background: #fff;
+  box-shadow: none;
+  content: "";
+  display: block;
+  height: 16px;
+  width: 16px;
+  left: 20px;
+  position: absolute;
+  bottom: 100%;
+  transform: rotate(-45deg) translateY(1rem);
+  z-index: -5;
+  border-radius: 0.2rem;
 }
 /*# sourceMappingURL=main.css.map */
