--- a/src/assets/scss/components/_colornav.scss
+++ b/src/assets/scss/components/_colornav.scss
@@ -1,11 +1,35 @@
-.myh2{
- font-size: 2rem;
- color: #32325d;
- font-weight: 400;
- line-height: 1.5;
+.myh2 {
+  font-size: 2rem;
+  color: #32325d;
+  font-weight: 400;
+  line-height: 1.5;
 }
-.container{
-    margin-left: auto;
-    margin-right: auto;
+.container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.cor-h1 {
+  color: white;
+  font-weight: 100;
+}
+
+.cor-p {
+  color: white;
+  font-size: 23px;
+  font-weight: 100;
+  margin-top: 20px;
+}
+
+.cor-btnn {
+  padding: 9px;
+  width: 94x;
+  border: 0;
+  letter-spacing: 1px;
+  margin-top: 20px;
+}
+
+#carouselExampleIndicators {
+  transform: scale(1) perspective(1040px) rotateY(-11deg) rotateX(2deg)
+    rotate(2deg);
+}
