--- a/src/assets/scss/components/_specalized.scss
+++ b/src/assets/scss/components/_specalized.scss
@@ -5,5 +5,13 @@
 
 
 .duman-h6{
-    color: #525f7f;
+    color: #2a334b;
+    font-size: 40px;
+}
+
+
+.duman-h3{
+    color: #aeb1b4;
+    margin-top: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
